添加秒和描述

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     body {
       height: 100vh;
       width: 100%;
-      text-align: center;      
+      text-align: center;
       overflow: hidden;
     }
 
@@ -41,6 +41,12 @@
     }
 
     .cn-date {}
+
+    .message {
+      font-family: TIME;
+      margin-top: 1rem;
+      font-size: 2rem; /* 字体大小设置为2rem */
+    }
   </style>
 </head>
 
@@ -49,6 +55,7 @@
     <div class="date"></div>
     <div class="time"></div>
     <div class="cn-date"></div>
+    <div class="message">你好浩宇</div>
   </div>
 
   <script src="./calendar.min.js"></script>
