【kindle 上 布局丢失解决】

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       width: 100%;
       text-align: center;
       overflow: hidden;
-      position: relative; /* 使body可以相对定位 */
+
     }
 
     .app {
@@ -30,6 +30,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+      -webkit-transform-origin: 0 0;
     }
 
     .time {
