【图片显示的不好看 所以还原了】

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 </head>
 
 <body>
-  <img src="1.png" alt="Image 1" class="top-image left" />
-  <img src="2.png" alt="Image 2" class="top-image right" />
+  <!-- <img src="1.png" alt="Image 1" class="top-image left" />
+  <img src="2.png" alt="Image 2" class="top-image right" /> -->
 
   <div class="app">
     <div class="date"></div>
